# otus_prof_bulk_async_cmd

./: CMakeLists.txt  CmdHandler.cpp  CmdHandler.h  LogerAsync.h  README.md  SingletonGetCmd.h  main.cpp
.github/workflows/: release.yml
